@@ -1,4 +1,7 @@
 Version 1.12.0+dev:
+ * AI:
+   * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
+     not set
  * Editor:
    * Fixed falcon race missing an icon due to having incorrectly-named image
      files.
